# assignment_problem

./: 0_0.txt  1_0.txt  README.md  output.txt  output_big.txt  pyproject.toml
src/: controller.py  exec.py  general.py  hungarian_n3.py  hungarian_n4.py  linear_approximation.py  linear_sum_assignment.py  linprog_test.py  main.py  qap_run_dataset.py  tests.py
src/LSAP/: input_utils.py  utils.py
src/LSAP/file_inputs/: example_5.txt
src/LSAP/output_files/: small_scipy.txt
src/instances/LSAP/: utils.py
src/instances/LSAP/input/: example_6.txt  example_7.txt  exampleopt.txt
src/instances/LSAP/output/: big_hn3.txt  big_scipy.txt  lsap_big_hn3.txt  lsap_big_scipy.txt  lsap_small_hn3.txt  lsap_small_scipy.txt  small_hn3.txt
src/instances/QAP/: utils.py
src/lib/LSAP/: hungarian_n3.py
src/lib/QAP/: QAP.py  qap_scipy.py
src/output_files/: big_hn3.txt  big_scipy.txt  small_hn3.txt  small_scipy.txt
