[tool.poetry]
name = "assignment-problem"
version = "0.1.0"
description = ""
authors = ["FWsantos <fwsantos23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
