[tool.poetry]
name = "assignment-problem"
version = "0.1.0"
description = "A linear assignment solution"
authors = ["FWsantos <fwsantos23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"


[tool.poetry.group.dev.dependencies]
scipy = "^1.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
